# picsim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.VSCodeCounter/2025-05-20_16-39-15/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
app/main/: app.cpp  decode.cpp  decode.h  fileReader.cpp  fileReader.h  instruction.cpp  instruction.h  logger.cpp  logger.h  pars.cpp  pars.h  simvm.cpp  simvm.h  utils.cpp  utils.hpp
app/main/exec/: bit.cpp  bit.h  byte.cpp  byte.h  exwatcher.cpp  exwatcher.h  instructionex.cpp  instructionex.h  jumpex.cpp  jumpex.h  literalex.cpp  literalex.h
app/main/memory/: eeprom.cpp  eeprom.h  program.cpp  program.h  ram.cpp  ram.h  stack.cpp  stack.h  watcher.cpp
app/main/ui/: controls.cpp  document.cpp  document.hpp  editor.cpp  ledArray.cpp  logs.cpp  registerTable.cpp  resets.cpp  runtime.cpp  settings.cpp  stats.cpp
app/main/ui/settings_window/: cycles.cpp  flags.cpp  ioPins.cpp  ledArray.cpp  registers.cpp  stack.cpp
app/src/main/: app.cpp  decode.cpp  fileReader.cpp  instruction.cpp  pars.cpp  simvm.cpp
app/src/main/exec/: byte.cpp  instructionex.cpp  jumpex.cpp  literalex.cpp
app/src/main/memory/: program.cpp
documentation/: 1.sh  DOCU.md  DOKUMENTATION.docx
testprog/: TPicSim1.LST  TPicSim10.LST  TPicSim101.LST  TPicSim12.LST  TPicSim15.LST  TPicSim21.LST  TPicSim3.LST  TPicSim7.LST  TPicSim8.LST  TPicSim9.LST
